tests/NormalTests/paczka1/fuzzy1/20383296.err
Error in line 1: DuKFc0R7 S646 42,9
Error in line 4: g9OT2oF9p A974 86,2
Error in line 3: 1aQIztd70 S112 78,7
Error in line 21: axwG4Mx S112 51,7
Error in line 25: mrn8RHs S646 98,0
Error in line 24: DuKFc0R7 A182 71,1
Error in line 27: mrn8RHs A182 73,6
Error in line 30: 1aQIztd70 A974 27,3
